Yet more updates to the initial race / event setup tab